[project]
name = "dagster-dify"
version = "0.27.4"
description = "A dagster plugin for the Dify"
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2.11.7",
    "dagster>1.11.0",
    "hatchling>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
